# camtrap

./: README.md
device/: README.md
device/client/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
device/client/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
device/client/main/camera/: camera.c  camera.h
device/client/main/communications/: network.c  network.h  uart.c  uart.h  wifi.c  wifi.h
device/client/main/communications/bluetooth/: ble.c  bleprph.h
device/client/main/communications/requests/: alarm.c  alarm.h  connect.c  connect.h  rfid.c  rfid.h  utils.c  utils.h
device/client/main/communications/server/: server.c
device/client/main/communications/server/handlers/: enabled.c  network_configuration.c  picture.c
device/client/main/led/: led.c  led.h
device/client/main/spiffs/: index.html
device/client/main/storage/: enabled.c  enabled.h  id.c  id.h  nvs_helpers.c  nvs_helpers.h  server_address.c  server_address.h  spiffs.c  wifi_password.c  wifi_password.h  wifi_ssid.c  wifi_ssid.h
device/stm32_main/: .gitignore  MFRC522Extended.cpp  stm32_main.ino
hardware/case/: ESP_32_Dock_Lid.stl  Laser_Distance_Sensor_Insert.stl  Main_Box_Lid.stl  Main_Box_With_ESP_Dock.stl  PIR_Insert.stl  Readme.md  STM_Shroud.stl  Stand.stl
server/: .gitignore  README.md  requirements.txt
server/client/: .eslintrc.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.mts
server/client/dev-dist/: sw.js  workbox-b5f7729d.js
server/server/: __init__.py  config.json  login.py
(+49 files in other folders)
